Corrected some flex gap at 360px

--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ SPACING-SYSTEM (px)
   }
 
   .card-details {
-    margin: 12px;
+    margin: 16px;
   }
 
   /* Mission */
